--- a/Contacts.html
+++ b/Contacts.html
@@ -30,7 +30,7 @@
   <nav>
       <ul>
           <li>
-              <a href="index.html">Home</a>
+              <a href="Index.html">Home</a>
           </li>
           <li>
               <a href="Lifestyle.html">Lifestyle</a>
