--- a/Events.html
+++ b/Events.html
@@ -34,7 +34,7 @@
       </div>
       <ul>
           <li>
-              <a href="index.html">Home</a>
+              <a href="Index.html">Home</a>
           </li>
           <li>
               <a href="Lifestyle.html">Lifestyle</a>
